0x01-variables_if_else_while/7-print_tebahpla.c:
ihpla.c:11:26: error: expected ‘;’ before ‘ch’
   11 |  for (ch = 'z'; ch >= 'a' ch--)
      |                          ^~~
      |                          ;
`
